--- a/source/index.jade
+++ b/source/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Product Gallery
+    title Comic Viewer
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(href="images/favicon.ico" rel="shortcut icon")
     meta(charset="UTF-8")
